--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- user should load CDN    arnft.core.js -->
   <!-- user can select 3d renderer and load CDN    arnft.babylonjs.js or arnft.threejs.js-->
 
-  <script type="module" src="./bundle.js"></script>
+  <script type="module" src="./build/arnft.core.js"></script>
   <script>
     let context;
 
