arnft.core added

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <script src="https://preview.babylonjs.com/gui/babylon.gui.min.js"></script>
   <script type="module" src="https://preview.babylonjs.com/inspector/babylon.inspector.bundle.js"></script>
 
-  <script type="module" src="../build/arnft.core.js"></script>
+  <script type="module" src="./bundle.js"></script>
   <!-- user should load CDN    arnft.core.js -->
   <!-- user can select 3d renderer and load CDN    arnft.babylonjs.js or arnft.threejs.js-->
 
